@@ -39,9 +39,12 @@
 /*           2002-01-27 Build 19                                             */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: version.c,v 1.47 2010/03/14 11:05:59 alfred Exp $                     */
+/* $Id: version.c,v 1.48 2010/03/27 15:03:36 alfred Exp $                     */
 /***************************************************************************** 
  * $Log: version.c,v $
+ * Revision 1.48  2010/03/27 15:03:36  alfred
+ * - 1.42 Bld75
+ *
  * Revision 1.47  2010/03/14 11:05:59  alfred
  * - version 1.42 Bld74
  *
@@ -221,7 +224,7 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version="1.42 Beta [Bld 74]";
+char *Version="1.42 Beta [Bld 75]";
 char *DebVersion = "1.42bld74-1";
 LongInt VerNo=0x142f;
 
