@@ -1,4 +1,4 @@
-$Id: changelog,v 1.58 2010/03/14 11:04:57 alfred Exp $
+$Id: changelog,v 1.59 2010/03/27 15:03:36 alfred Exp $
 ------------------------------------------------------------------------------
 v1.41r3 Aenderungen: (-->v1.41r4beta)
 
@@ -1190,3 +1190,7 @@ v1.41r8 Aenderungen: (-->v1.42beta)
 2010-03-14 [Bld74]
 
 - Addition    : DW/DD/DQ/DD, DC.[wlxsdp], ADR also accept string arguments
+
+2010-03-26 [Bld75]
+
+- Bugfix      : correct address range for M16C bit short addressing
